--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This is our simple shell, curiosity is what drive us.
 
-Diego Valdez </*email prefered*/>
+Diego Valdez <contactodiegoavc@gmail.com>
 Javier Icaza <javiicaza@gmail.com>
